tests/errors/regex-empty/errors.snap
---
source: tests/errors.rs
expression: output
---
error[E0001]: Empty regular expression.
  │
1 │ def empty-pattern = ``
  │                     ^^
  ╰─𜱶 tests/errors/regex-empty/main.pa:1:21
